<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/checkMotorized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusForward="@+id/typeMotorized"
            android:text="@string/textMotorized">

            <requestFocus />
        </CheckBox>

        <Spinner
            android:id="@+id/typeMotorized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/checkMotorized"
            android:layout_toRightOf="@+id/checkMotorized"
            android:nextFocusForward="@+id/checkGuiasL" />

        <requestFocus />


        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkMotorized"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkGuiasL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusForward="@+id/checkGuiasI"
                android:text="@string/textGL" />

            <CheckBox
                android:id="@+id/checkGuiasI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusForward="@+id/editTextGLat"
                android:text="@string/textGI" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextGLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintGLat"
                android:inputType="number"
                android:nextFocusDown="@+id/editTextGInf"
                android:nextFocusForward="@+id/editTextGInf"
                android:nextFocusRight="@+id/editTextGInf" />

            <EditText
                android:id="@+id/editTextGInf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintGInf"
                android:inputType="number"
                android:nextFocusDown="@+id/editTextCenef"
                android:nextFocusForward="@+id/editTextCenef"
                android:nextFocusRight="@+id/editTextCenef" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout2"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkSupl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/typeSupl"
                android:text="@string/textSupl" />

            <Spinner
                android:id="@+id/typeSupl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/checkCenef" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout3"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkCenef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/checkSup"
                android:text="@string/textCenef" />

            <EditText
                android:id="@+id/editTextCenef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintCenef"
                android:inputType="number" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout5"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkSup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusForward="@+id/typeSup"
                android:text="@string/textSup" />

            <Spinner
                android:id="@+id/typeSup"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:nextFocusForward="@+id/typeProd" />

        </LinearLayout>

        <Spinner
            android:id="@+id/typeProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout4"
            android:nextFocusForward="@+id/checkMotorized" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>